dashboard-counting-v1/main.tf
################################################################################
# VPC
################################################################################

module "vpc" {
  source = "terraform-aws-modules/vpc/aws"

  name = var.vpc_name
  cidr = var.vpc_cidr

  azs                     = var.azs
  private_subnets         = var.private_subnets
  public_subnets          = var.public_subnets
  enable_nat_gateway      = var.enable_nat_gateway
  single_nat_gateway      = var.single_nat_gateway
  create_igw              = var.create_igw
  map_public_ip_on_launch = var.map_public_ip_on_launch

  tags = {
    Terraform   = "true"
    Environment = "dev"
  }
}

################################################################################
# Security Groups
################################################################################

resource "aws_security_group" "dashboard_vm" {
  vpc_id = module.vpc.vpc_id
  name   = "SG-dashboard"

  tags = {
    Name = "SG-dashboard"
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.my_ip_cidr]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 9002
    to_port     = 9002
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "counting_vm" {
  vpc_id = module.vpc.vpc_id
  name   = "SG-counting"

  tags = {
    Name = "SG-counting"
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["172.16.1.0/24"]
  }

  ingress {
    from_port       = 9003
    to_port         = 9003
    protocol        = "tcp"
    security_groups = [aws_security_group.dashboard_vm.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

################################################################################
# Data Sources (AMI)
################################################################################

data "aws_ami" "ubuntu" {
  most_recent = true

  owners = ["099720109477"]

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd-gp3/ubuntu-noble-24.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
}

################################################################################
# EC2 Instances
################################################################################

resource "aws_instance" "dashboard_vm" {
  ami                         = data.aws_ami.ubuntu.id
  instance_type               = var.instance_type
  subnet_id                   = module.vpc.public_subnets[0]
  vpc_security_group_ids      = [aws_security_group.dashboard_vm.id]
  key_name                    = aws_key_pair.counting_dashboard.key_name
  associate_public_ip_address = true

  user_data = templatefile("${path.module}/scripts/dashboard-service.sh", {
    counting_private_ip = aws_instance.counting_vm.private_ip
  })

  tags = {
    Name = "dashboard-vm"
  }
}

resource "aws_instance" "counting_vm" {
  ami                    = data.aws_ami.ubuntu.id
  instance_type          = var.instance_type
  subnet_id              = module.vpc.private_subnets[0]
  vpc_security_group_ids = [aws_security_group.counting_vm.id]
  key_name               = aws_key_pair.counting_dashboard.key_name
  user_data              = file("${path.module}/scripts/counting-service.sh")

  tags = {
    Name = "counting-vm"
  }
}
